--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    runtimeOnly('org.hsqldb:hsqldb')
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.1.Final'
+    runtimeOnly('mysql:mysql-connector-java')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
