--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:hsqldb:file:testdb
-jdbc.username=SA
-jdbc.password=
+jdbc.url=jdbc:mysql://localhost:3306/java
+jdbc.username=root
+jdbc.password=123456
