--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.1.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.hibernate:hibernate-core'
+    implementation 'org.mybatis:mybatis:3.5.4'
+    implementation 'org.mybatis:mybatis-spring:2.0.4'
     runtimeOnly('mysql:mysql-connector-java')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
