--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'org.hibernate:hibernate-core'
     implementation 'org.mybatis:mybatis:3.5.4'
